media file organization updates

--- a/scroll-test.html
+++ b/scroll-test.html
@@ -4,7 +4,7 @@
 
 	</script>
 </head>
-<body bgcolor="#ffffff" style="background-image:url('speed racer logo white only.jpg'); background-repeat:no-repeat; background-position: top-center;">
+<body bgcolor="#ffffff" style="background-image:url('media/speed racer logo white only.jpg'); background-repeat:no-repeat; background-position: top-center;">
 <h1 style="font-family: Helvetica;">HTTP Shell</h1>
 <center>
 <iframe id="terminal" src ="test-shell-2.html#line" width="900px" height="400px" frameborder=0 style="background: rgba(0, 0, 0, 0.9); color: white; -webkit-box-shadow: rgb(0, 0, 0) 0px 0px 20px;">
